<resources>
    <string name="app_name">微博_panda</string>

    <string name="action_settings">Settings</string>

    <!-- 授权按钮的相关描述 -->
    <string name="pwb_get_token_all_in_one">授权登录微博</string>
    <string name="pwb_logout">退出登录</string>

    <!-- 底部导航栏标题 -->
    <string name="pwb_bottombar_home">首页</string>
    <string name="pwb_bottombar_message">消息</string>
    <string name="pwb_bottombar_search">发现</string>
    <string name="pwb_bottombar_me">我</string>

    <!-- 个人中心的tab导航栏 -->
    <string name="pwb_user_info_home">主页</string>
    <string name="pwb_user_info_status">微博</string>
    <string name="pwb_user_info_picture">相册</string>
    <string name="pwb_user_info_manage">管理</string>

    <string name="pwb_save">保存</string>
    <string name="pwb_orgin">原图</string>

    <!-- 授权动作的提示信息 -->
    <string name="pwb_toast_auth_success">授权成功</string>
    <string name="pwb_toast_auth_failed">授权失败</string>
    <string name="pwb_toast_auth_canceled">取消授权</string>
    <string name="pwb_token_to_string_format_1">Token:%1$s \n有效期: %2$s</string>
    <string name="pwb_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="pwb_logout_text">%1$s ：退出登录成功！</string>

</resources>
