<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/rg_user_info"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_info"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:button="@null"
            android:textSize="@dimen/txtsize_subhead"
            android:textColor="@drawable/txt_color_grav2orange"
            android:background="@color/white"
            android:text="@string/pwb_user_info_home" />

        <RadioButton
            android:id="@+id/rb_status"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:button="@null"
            android:textSize="@dimen/txtsize_subhead"
            android:textColor="@drawable/txt_color_grav2orange"
            android:background="@color/white"
            android:checked="true"
            android:text="@string/pwb_user_info_status" />

        <RadioButton
            android:id="@+id/rb_photos"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:button="@null"
            android:textSize="@dimen/txtsize_subhead"
            android:textColor="@drawable/txt_color_grav2orange"
            android:background="@color/white"
            android:text="@string/pwb_user_info_picture" />

        <RadioButton
            android:id="@+id/rb_manager"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:button="@null"
            android:textSize="@dimen/txtsize_subhead"
            android:textColor="@drawable/txt_color_grav2orange"
            android:background="@color/white"
            android:text="@string/pwb_user_info_manage" />
    </RadioGroup>

    <com.panda.pweibo.widget.UnderlineIndicatorView
        android:id="@+id/uliv_user_info"
        android:layout_width="match_parent"
        android:layout_height="4dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_gray" />

</LinearLayout>